fix: styles on safari

--- a/src/components/SearchPanel/index.css
+++ b/src/components/SearchPanel/index.css
@@ -10,6 +10,8 @@
   flex: 1;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
   border-top: 2px solid rgb(220, 229, 236);
   border-bottom: 2px solid rgb(220, 229, 236);
   border-left: 2px solid rgb(220, 229, 236);
@@ -17,6 +19,7 @@
   font-size: 20px;
   padding: 0px 8px;
   outline: none;
+  margin-right: 0;
 }
 
 .search-panel__input:focus-visible{
@@ -35,11 +38,12 @@
   font-size: 16px;
   padding: 0px 8px;
   outline: none;
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" t="1687118868270" class="icon" viewBox="0 0 1024 1024" version="1.1" p-id="4117" width="32" height="32"><path d="M139.008 835.008h745.984c5.312 0 8 2.688 8 8v56c0 5.312-2.688 8-8 8H139.008c-5.312 0-8-2.688-8-8v-56c0-5.312 2.688-8 8-8z m6.016-184.128l129.024 100.8a44.16 44.16 0 0 0 27.072 9.344h315.392a43.712 43.712 0 0 0 34.688-16.96l239.488-306.56c23.104-29.504 17.92-72.32-11.712-95.36L573.056 103.04a67.968 67.968 0 0 0-95.488 11.712L133.312 555.52a67.968 67.968 0 0 0 11.712 95.424zM531.84 162.304l299.648 234.048-183.04 234.24-299.584-234.048 183.04-234.24zM304.512 453.312l299.584 234.048-1.28 1.664H310.848L192.512 596.608l112-143.36z" fill="%23000000" p-id="4118"/></svg>');
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" t="1687118868270" viewBox="0 0 1024 1024" version="1.1" width="32" height="32"><path d="M139.008 835.008h745.984c5.312 0 8 2.688 8 8v56c0 5.312-2.688 8-8 8H139.008c-5.312 0-8-2.688-8-8v-56c0-5.312 2.688-8 8-8z m6.016-184.128l129.024 100.8a44.16 44.16 0 0 0 27.072 9.344h315.392a43.712 43.712 0 0 0 34.688-16.96l239.488-306.56c23.104-29.504 17.92-72.32-11.712-95.36L573.056 103.04a67.968 67.968 0 0 0-95.488 11.712L133.312 555.52a67.968 67.968 0 0 0 11.712 95.424zM531.84 162.304l299.648 234.048-183.04 234.24-299.584-234.048 183.04-234.24zM304.512 453.312l299.584 234.048-1.28 1.664H310.848L192.512 596.608l112-143.36z" fill="%23000000"/></svg>');
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
   color: transparent;
+  margin-left: 0;
 }
 
 .search-panel__submit {
